--- a/PA1_template_standalone.Rmd
+++ b/PA1_template_standalone.Rmd
@@ -1,9 +1,6 @@
 ---  
 title: Reproducible Research - Project 1
-output: 
-  html_document: 
-    keep_md: yes
-    self_contained: no
+output: html_document
 ---
 
 Data were obtained from https://d396qusza40orc.cloudfront.net/repdata/data/activity.zip on 10/01/2016, but assume data are in current working directory.
